--- a/libs/myhome/src/lib/containers/timeline/timeline.component.html
+++ b/libs/myhome/src/lib/containers/timeline/timeline.component.html
@@ -4,10 +4,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content scroll-y="true">
   <!-- prices, logo etc... -->
-
-  <united-post-list [timelineUpdate]="timestamp"></united-post-list>
+  <united-post-list></united-post-list>
 
   <ng-template #loading>
     <div class="vertical-center">
