--- a/libs/instrument/src/lib/containers/instrument-view/instrument-view.component.html
+++ b/libs/instrument/src/lib/containers/instrument-view/instrument-view.component.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title> Instrument Feed of {{ this.instrumentSymbol }}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,10 +10,7 @@
 <ion-content>
   <!-- prices, logo etc... -->
 
-  <united-post-list
-    [assetTagUpdate]="timestamp"
-    [assetTag]="instrumentSymbol"
-  ></united-post-list>
+  <united-post-list></united-post-list>
 
   <ng-template #loading>
     <div class="vertical-center">
