--- a/libs/navigation/src/lib/bottom-navigation/bottom-navigation.component.html
+++ b/libs/navigation/src/lib/bottom-navigation/bottom-navigation.component.html
@@ -15,7 +15,7 @@
       <!--      <ion-label>Trends</ion-label>-->
     </ion-tab-button>
 
-    <ion-tab-button tab="instrument">
+    <ion-tab-button tab="instruments">
       <ion-icon name="search"></ion-icon>
       <!--      <ion-label>Discover</ion-label>-->
     </ion-tab-button>
