--- a/libs/social/src/lib/containers/post-list/post-list.component.html
+++ b/libs/social/src/lib/containers/post-list/post-list.component.html
@@ -15,7 +15,10 @@
 </div>
 
 <ion-infinite-scroll (ionInfinite)="loadMore($event)">
-  <ion-infinite-scroll-content loadingText="Loading more data...">
+  <ion-infinite-scroll-content
+    loadingText="Loading more data..."
+    loadingSpinner="bubbles"
+  >
   </ion-infinite-scroll-content>
 </ion-infinite-scroll>
 
