--- a/libs/social/src/lib/containers/post-list/post-list.component.html
+++ b/libs/social/src/lib/containers/post-list/post-list.component.html
@@ -2,30 +2,45 @@
   <ion-refresher-content></ion-refresher-content>
 </ion-refresher>
 
-<!-- <div *ngIf="postsLoaded$ | async as post; else loading"> -->
-<div *ngIf="!isLoading; else loading">
-  <united-post-item-view
-    *ngFor="let p of posts$ | async"
-    (showPostDetail)="onPostDetail($event)"
-    (postLike)="onPostLike($event)"
-    (postDeleted)="onPostDelete($event)"
-    [post]="p"
-  >
-  </united-post-item-view>
-</div>
+<!-- <p>isloading: {{ this.isLoading }}</p>
+<p>initialLoaded: {{ this.initialLoaded }}</p> -->
 
-<ion-infinite-scroll (ionInfinite)="loadMore($event)">
-  <ion-infinite-scroll-content
-    loadingText="Loading more data..."
-    loadingSpinner="bubbles"
-  >
-  </ion-infinite-scroll-content>
-</ion-infinite-scroll>
+<div *ngIf="!initialLoaded; else loadmore">
+  <div *ngIf="!isLoading; else loading">
+    <div *ngIf="posts$ | async as post; else loading">
+      <united-post-item-view
+        *ngFor="let p of posts$ | async"
+        (showPostDetail)="onPostDetail($event)"
+        (postLike)="onPostLike($event)"
+        (postDeleted)="onPostDelete($event)"
+        [post]="p"
+      >
+      </united-post-item-view>
+    </div>
+  </div>
+</div>
+<ng-template #loadmore>
+  <div *ngIf="posts$ | async as post; else loading">
+    <united-post-item-view
+      *ngFor="let p of posts$ | async"
+      (showPostDetail)="onPostDetail($event)"
+      (postLike)="onPostLike($event)"
+      (postDeleted)="onPostDelete($event)"
+      [post]="p"
+    >
+    </united-post-item-view>
+  </div>
+</ng-template>
 
 <ng-template #loading>
-  <div class="vertical-center">
+  <div class="vertical-center" *ngIf="!initialLoaded">
     <div class="spin">
       <ion-spinner name="crescent"></ion-spinner>
     </div>
   </div>
 </ng-template>
+
+<ion-infinite-scroll (ionInfinite)="loadMore($event)">
+  <ion-infinite-scroll-content loadingText="Loading more data...">
+  </ion-infinite-scroll-content>
+</ion-infinite-scroll>
