--- a/libs/social/src/lib/post-item-view/post-item-view.component.html
+++ b/libs/social/src/lib/post-item-view/post-item-view.component.html
@@ -34,6 +34,8 @@
     <p>{{ post.text }}</p>
   </ion-card-content>
 
+  <united-assettag-view [assetTags]="post.assetTags"></united-assettag-view>
+
   <div>
     <ion-item slot="end" lines="none">
       <!-- LIKE COUNT -->
@@ -57,21 +59,6 @@
         </ion-label>
       </ion-button>
     </ion-item>
-  </div>
-
-  <div>
-    <swiper
-      [config]="config"
-      (swiper)="onSwiper($event)"
-      (slideChange)="onSlideChange()"
-    >
-      <ng-template swiperSlide>Slide 1</ng-template>
-      <ng-template swiperSlide>Slide 2</ng-template>
-      <ng-template swiperSlide>Slide 3</ng-template>
-      <ng-template swiperSlide>Slide 4</ng-template>
-      <ng-template swiperSlide>Slide 5</ng-template>
-      <ng-template swiperSlide>Slide 6</ng-template>
-    </swiper>
   </div>
 
   <!-- SOCIAL ITERACTION BUTTONS -->
